fix z-index

--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ body{
 }
 .card .card-body,
 .card .bottom{
-    z-index: 3;
+    z-index: 1;
 }
 
 /*################################
